# bodegaapp

./: .gitignore  LICENCE  MANIFEST.in  Makefile  README.md  SIGUIENTE PASO.txt  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-windows.yml
BodegaApp_Portable_Windows/: LEEME.txt
BodegaApp_Portable_Windows/config/: __init__.py  device_config.py
BodegaApp_Portable_Windows/models/: device.py
BodegaApp_Portable_Windows/views/: register_view.py
build_windows/BodegaApp/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-BodegaApp.txt  xref-BodegaApp.html
config/: settings.py
docs/: USER_GUIDE.MD
models/: __init__.py  log.py
scripts/: __init__.py  backup_database.py  diagnose_tkinter.py  setup.py
scripts/installers/: build.py  build_LinuxInstaller.py  build_WindowsInstaller.py  build_win.py
src/: app.py  database.py  logger.py  main.py  update_check.py  utils.py
tests/: __init__.py  test_app.py  test_database.py  test_models.py
views/: __init__.py  info_view.py  search_view.py
