[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodega-app"
version = "1.0.0"
description = "Sistema de gestión de inventario para dispositivos electrónicos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu.email@example.com"}
]
keywords = ["inventory", "bodega", "devices", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Inventory",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "customtkinter>=5.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gui = [
    "pillow>=10.0.0",
]

[project.scripts]
bodega-app = "src.main:main"
bodega-import = "scripts.import_data:main"
bodega-backup = "scripts.backup_database:backup_database"

[tool.setuptools]
packages = ["src", "config", "models", "views"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.ini"]
"config" = ["*.py"]
"data" = ["*.db", "exports/*", "backups/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]